# llm-evaluation-benchmarking

./: .env.example  .gitignore  .hfignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  nightly-eval.yml
configs/: decision_gates.yaml  policy.yaml  run.example.yaml  run.groq.yaml
data/benchmarks/mmlu_subset/: dev.jsonl
docs/: deployment_hf_spaces.md  governance.md  methodology.md
scripts/: publish_hf_space.py  run_nightly_eval.py
src/llm_eval/: __init__.py  __main__.py  cache.py  cli.py  config.py  connectivity.py  policy.py  reporting.py  runner.py  scoring.py  stats.py  storage.py
src/llm_eval/benchmarks/: __init__.py  base.py  mmlu_subset.py
src/llm_eval/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  groq_provider.py  http.py  openai_provider.py
src/llm_eval/ui/: __init__.py  gradio_app.py  jobs.py  session_state.py
tests/: test_config.py  test_connectivity.py  test_groq_provider.py  test_key_debug.py  test_mmlu_subset.py  test_openai_diagnostics.py  test_policy.py  test_reporting.py  test_runner.py  test_scoring.py
